# agents

./: .gitignore  .lycheeignore  .markdownlint.jsonc  .pre-commit-config.yaml  .secrets.sample  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  azure.yaml  event.json  lychee.toml  package-lock.json  pyproject.toml
.dvc/: config
.githooks/: commit-msg  pre-push
.github/: .linkspector.yml
.github/workflows/: lint-markdown.yml  run-checks.yml  run-tests.yml  validate-markdown.yml  validate-pr.yml
app/backend/app/: .env.sample  README.md  main.py
app/backend/app/auth/: oauth2.py
app/backend/app/core/: config.py
app/backend/app/middleware/: audit.py
app/backend/app/models/: database.py  models.py
app/backend/app/routers/: authentication.py  booking.py  chat.py  clinic.py  dummy_orchestrator.py  dummy_record.py  record.py  stock.py  user.py  (+1 more)
app/frontend/: angular.json  package-lock.json  package.json  tailwind.config.js
app/frontend/src/: index.html  styles.css
data/: data.sql  schema.sql  vaccination_db.sqlite.dvc
docs/: ALTERNATIVE_PYTHON_PACKAGE_MANAGERS.md  API_ENDPOINTS.md  DATABASE_MODELS.md  DEBUGGING_GITHUB_ACTIONS_LOCALLY.md  DEVELOPMENT.md  POSTMAN_TESTING.md  PROJECT_STRUCTURE.md
infra/: ai.yaml  main.bicep  main.parameters.json
infra/core/ai/: ai-environment.bicep  cognitive-services.bicep  hub-dependencies.bicep  hub.bicep  project.bicep  serverless-deployment.bicep
infra/core/database/: cosmos-account.bicep
infra/core/host/: container-registry.bicep
infra/core/monitor/: applicationinsights-dashboard.bicep  applicationinsights.bicep  loganalytics.bicep
infra/core/security/: keyvault-access.bicep  keyvault-secret.bicep  keyvault.bicep  managed-identity.bicep
infra/core/storage/: storage-account.bicep
notebooks/: autogen.ipynb  autogen_groupchat.ipynb  autogen_handoff.ipynb  data.ipynb  genarate_database.ipynb  generate_database.ipynb  langgraph.ipynb  openai_swarm.ipynb  query_database.ipynb
notebooks/autogen/: agent_tools.py  agent_tools_wrapper.py  autogen.ipynb  autogen_groupchat.ipynb  autogen_handoff.ipynb  message_type.py  tool_testing.ipynb  user_agent.py  worker_agent.py
scripts/: format_bicep.ps1  format_bicep.sh  functions.ps1  functions.sh  get_data.ps1  get_data.sh  postprovision.sh  rolesgroup.ps1  rolesgroup.sh  setup_dvc.ps1  setup_dvc.sh  start.ps1  start.sh  test.ps1  test.sh  test_api.ps1  test_api.sh
tests/: test_deployments.py  utils.py
(+59 files in other folders)
